[package]
name = "surrealist"
version = "0.0.0"
description = "Powerful graphical SurrealDB query playground and database explorer for Browser and Desktop"
authors = ["SurrealDB"]
license = "MIT"
repository = "https://github.com/surrealdb/surrealist"
edition = "2021"
publish = false

[dependencies]
tauri = { version = "2.0.0-rc.9", features = [ "devtools"] }
tauri-plugin-fs = "2.0.0-rc.2"
tauri-plugin-os = "2.0.0-rc.1"
tauri-plugin-log = "2.0.0-rc.2"
tauri-plugin-http = "2.0.0-rc.2"
tauri-plugin-shell = "2.0.0-rc.3"
tauri-plugin-dialog = "2.0.0-rc.4"
tauri-plugin-process = "2.0.0-rc.1"
tauri-plugin-updater = "2.0.0-rc.2"
tauri-plugin-deep-link = "2.0.0-rc.3"
tauri-plugin-localhost = "2.0.0-rc.1"
tauri-plugin-single-instance = "2.0.0-rc.1"
portpicker = "0.1"
serde_json = "1.0"
dirs = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", default-features = false}
log = "^0.4"
url = "2"
showfile = "0.1.1"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10.70", features = ["vendored"] }

[build-dependencies]
tauri-build = { version = "2.0.0-rc.8" }
